Fix header alignment: Change header alignment from center to start for improved layout consistency

--- a/styles/components/bg-decorations.css
+++ b/styles/components/bg-decorations.css
@@ -78,7 +78,7 @@
 }
 
 .bg-decoration--image-start {
-  background-image: url('../assets/images/start.png');
+  background-image: url('../../assets/images/start.png');
 }
 
 /**
