--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -8,7 +8,7 @@
 .header {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: start;
   margin-bottom: var(--spacing-lg);
 }
 
